--- a/day10/backboard/src/main/resources/templates/board/board_create.html
+++ b/day10/backboard/src/main/resources/templates/board/board_create.html
@@ -3,7 +3,9 @@
         <div class="row">
             <div class="col">
                 <h5 class="my-3 pb-2">게시글 작성</h5>
-                <form th:action="@{/board/create}" th:object="${boardForm}" method="post">
+
+                <form th:object="${boardForm}" method="post">
+                    <input type="hidden" th:name ="${_csrf.parameterName}" th:value = "${_csrf.token}">
                     <!-- 입력검증영역 /초기작업 -->
                     <!-- <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
                         <div th:each="error : ${#fields.allErrors()}" th:text="${error}"></div>
