--- a/day10/backboard/src/main/resources/templates/board/board_detail.html
+++ b/day10/backboard/src/main/resources/templates/board/board_detail.html
@@ -12,7 +12,11 @@
                         <div class="card-text" th:text="${board.content}"></div>
                         <div class="d-flex justify-content-end">
                             <div class="badge bg-light text-dark p-1 text-start">
-                                <div th:text="${#temporals.format(board.createDate, 'yyyy-MM-dd HH:mm:ss')}"></div>
+                                <div class="mb-1">
+                                    <span th:if="${board.writer !=null}" th:text="${board.writer.username}"></span>
+                                    <span></span>
+                                    <span th:text="${#temporals.format(board.createDate, 'yyyy-MM-dd HH:mm:ss')}"></span>
+                                </div>
                             </div>
                         </div>                        
                     </div>
@@ -21,7 +25,7 @@
         </div>
         
         <!-- 댓글 수 표시 영역 -->
-        <div class="row">
+        <div class="row mt-2">
             <div class="col">
                 <h5 th:text="|${#lists.size(board.replyList)}개의 댓글이 있습니다|"></h5>
             </div>
@@ -35,11 +39,24 @@
                         <div class="card-text" th:text="${reply.content}"></div>
                         <div class="d-flex justify-content-end">
                             <div class="badge bg-light text-dark p-1 text-start">
-                                <div th:text="${#temporals.format(reply.createDate, 'yyyy-MM-dd HH:mm:ss')}"></div>
-                            </div>
+                                <div class="mb-1">
+                                    <span th:if="${board.writer !=null}" th:text="${reply.writer.username}"></span>
+                                    <span></span>
+                                    <span th:text="${#temporals.format(reply.createDate, 'yyyy-MM-dd HH:mm:ss')}"></span>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <!-- 게시글 작성자가 있고, 현재 로그인한 사용자의 이름과 작성자 이름이 동일해야 수정 가능 -->
+                <div class="d-flex justify-content-end" 
+                th:if="${board.writer !=null and #authentication.getPrincipal().getUsername() == board.writer.username}"
+                        sec:authoriz="isAuthenticated()">
+                        <a th:href="@{|/board/modify/${board.bno}|}" class="btn btn-sm btn-warning">수정</a>
+                    </div>
             </div>
         </div>
 
@@ -50,7 +67,9 @@
             <!-- 댓글내용영역-->
             <textarea th:field="*{content}" rows="5" class="form-control mb-1"></textarea>
             <div class="text-end">
-                <input type="submit" value="댓글저장" class="btn btn-sm btn-primary">
+                <!-- 로그인을 안 하면 아예 버튼이 표시되지 않도록 !! -->
+                <input sec:authorize="isAuthenticated()" type="submit" value="댓글저장" class="btn btn-sm btn-primary">
+                <input sec:authorize="isAnonymous()" type="submit" value="댓글저장" class="btn btn-sm btn-primary disabled">
                 <a href="/board/list" class="btn btn-sm btn-success">리스트</a>
             </div>
         </form> 
